Fix 'OFX import Online Statement Balance error'

Set closing balance and end date of MyMoneyStatement from
ledger_balance and ledger_balance_date only if both are present
to follow libofx maintainer hint mentioned in the related bug.

FIXED-IN:4.8.1
BUG:323480